Fix landscape UI styling for mobile devices; reduce height of horizontal scrollbars; visual fixes;

--- a/Frontend/src/assets/global.css
+++ b/Frontend/src/assets/global.css
@@ -136,6 +136,7 @@ a, .material-icons {
 }
 
 ::-webkit-scrollbar {
+  height: 4px;
   width: 4px;
 }
 
